## Process this file with automake to produce Makefile.in

# where to install the scripts
scriptdir = $(pkgdatadir)/scripts

# these scripts will be installed
script_SCRIPTS = \
	sync-abook.sh \
	sync-evocalendar.sh \
	sync-evolution.sh \
	sync-kaddressbook.sh \
	sync-knotes.sh \
	sync-korganizer.sh \
	sync-ldif.sh \
	sync-notes.sh \
	sync-palm-jppy.py \
	sync-thunderbird.sh \
	sync-thunderbird-nano.sh \
	sync-tomboy.sh \
	sync-webcalendar.sh \
	ldif2vcf.sh \
	mab2vcard \
	convert-ogg2mp3.sh \
	convert-ogg2m4a.sh \
	convert-flac2mp3.sh \
        convert-flac2m4a.sh \
        convert-m4a2mp3.sh \
        convert-mp32m4a.sh \
        convert-ogg2mp3.sh \
        convert-ogg2m4a.sh \
        convert-wav2mp3.sh \
        convert-wav2m4a.sh

# these scripts will of course also go in the distribution tarball.
EXTRA_DIST=$(script_SCRIPTS)
