## Process this file with automake to produce Makefile.in

# where to install the scripts
scriptdir = $(pkgdatadir)/scripts

# these scripts will be installed
script_SCRIPTS = \
	sync-abook.sh \
	sync-evocalendar.sh \
	sync-evolution.sh \
	sync-kaddressbook.sh \
	sync-knotes.sh \
	sync-korganizer.sh \
	sync-ldif.sh \
	sync-notes.sh \
	sync-palm-jppy.py \
	sync-thunderbird.sh \
	sync-thunderbird-nano.sh \
	sync-tomboy.sh \
	sync-webcalendar.sh \
	ldif2vcf.sh \
	mab2vcard \
	convert-2mp3.sh \
	convert-2m4a.sh \
	gtkpod-convert-common.sh 

# these scripts will of course also go in the distribution tarball.
EXTRA_DIST=$(script_SCRIPTS)
